Updated to retool security following Swaggerize-Express issue resolution
