# src/code-set-service/handlers/code/{setId}/{codeId}.js
@@ -1,6 +1,5 @@
 'use strict';
 var dataProvider = require('../../../data/azureCodeSet.js');
-var auth = require('../../../security/jwtAuth.js');
 
 /**
  * Operations on /code/{setId}/{codeId}
@@ -15,17 +14,12 @@ module.exports = {
      */
     get: function getCode(req, res, next) {
 
-        auth.authorize(req, function(err, decoded){
-
-            if(!err) {
-                dataProvider.getCodes(req.params.setId, req.params.codeId, function (err, data) {
-                    if (err) {
-                        res.status(400).send(err);
-                    }
-                    else {
-                        res.status(200).send(data);
-                    }
-                });
+        dataProvider.getCodes(req.params.setId, req.params.codeId, function (err, data) {
+            if (err) {
+                res.status(400).send(err);
+            }
+            else {
+                res.status(200).send(data);
             }
         });
     }
