# src/code-set-service/handlers/codes/{setId}.js
@@ -1,6 +1,5 @@
 'use strict';
 var dataProvider = require('../../data/azureCodeSet.js');
-var auth = require('../../security/jwtAuth.js');
 /**
  * Operations on /codes/{setId}
  */
@@ -14,16 +13,12 @@ module.exports = {
      */
     get: function getCodeSet(req, res, next) {
 
-        auth.authorize(req, function(err, decoded) {
-            if (!err) {
-                dataProvider.getCodes(req.params.setId, null, function (err, data) {
-                    if (err) {
-                        res.status(400).send(err);
-                    }
-                    else {
-                        res.status(200).send(data);
-                    }
-                });
+        dataProvider.getCodes(req.params.setId, null, function (err, data) {
+            if (err) {
+                res.status(400).send(err);
+            }
+            else {
+                res.status(200).send(data);
             }
         });
     }
